syntax = "proto3";

option csharp_namespace = "TowerWars.WorldManager.Protos";

package world;

service WorldService {
  rpc GetZoneAssignment (ZoneAssignmentRequest) returns (ZoneAssignmentResponse);
  rpc CreateInstance (CreateInstanceRequest) returns (CreateInstanceResponse);
  rpc DestroyInstance (DestroyInstanceRequest) returns (DestroyInstanceResponse);
  rpc GetZoneStatus (ZoneStatusRequest) returns (ZoneStatusResponse);
  rpc RegisterZone (RegisterZoneRequest) returns (RegisterZoneResponse);
  rpc ZoneHeartbeat (ZoneHeartbeatRequest) returns (ZoneHeartbeatResponse);
}

message ZoneAssignmentRequest {
  string user_id = 1;
  string character_id = 2;
  string game_mode = 3;
  string party_id = 4;
}

message ZoneAssignmentResponse {
  bool success = 1;
  string zone_id = 2;
  string address = 3;
  int32 port = 4;
  string connection_token = 5;
  string error = 6;
}

message CreateInstanceRequest {
  string game_mode = 1;
  repeated string player_ids = 2;
  string map_id = 3;
}

message CreateInstanceResponse {
  bool success = 1;
  string instance_id = 2;
  string zone_id = 3;
  string address = 4;
  int32 port = 5;
  string error = 6;
}

message DestroyInstanceRequest {
  string instance_id = 1;
}

message DestroyInstanceResponse {
  bool success = 1;
}

message ZoneStatusRequest {
  string zone_id = 1;
}

message ZoneStatusResponse {
  string zone_id = 1;
  string status = 2;
  int32 player_count = 3;
  int32 capacity = 4;
  int64 uptime_seconds = 5;
}

message RegisterZoneRequest {
  string zone_id = 1;
  string address = 2;
  int32 port = 3;
  int32 capacity = 4;
}

message RegisterZoneResponse {
  bool success = 1;
}

message ZoneHeartbeatRequest {
  string zone_id = 1;
  int32 player_count = 2;
  repeated string active_matches = 3;
}

message ZoneHeartbeatResponse {
  bool acknowledged = 1;
  bool should_shutdown = 2;
}
